syntax = "proto3";

package configure;
option go_package = "./v1;v1";
import "validate/validate.proto";

message Template{
  uint32 id = 1;
  uint32 server_id = 2;
  string description = 3;
  string version = 4;
  bool is_use = 5;
  string content = 6;
  uint32 created_at = 7;
}

message PageTemplateRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  uint32 server_id = 3[(validate.rules).uint32 = {gt: 0}];
}

message PageTemplateReply {
  uint32 total = 1;
  repeated Template list = 2;
}


// 查询指定模板
message CurrentTemplateRequest{
  uint32 server_id = 1[(validate.rules).uint32 = {gt: 0}];
}

message CurrentTemplateReply{
    Template template = 1;
}

// 查询指定模板
message GetTemplateRequest{
   uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}

message GetTemplateReply{
  uint32 id = 1;
  uint32 server_id = 2;
  string content = 3;
  string description = 4;
  string version = 5;
  optional bool is_use = 6;
  optional string operator = 7;
  optional uint32 operator_id = 8;
}

// 新增模板
message AddTemplateRequest {
  uint32 server_id = 1[(validate.rules).uint32 = {gt: 0}];
  string content = 2[(validate.rules).string = {min_len: 3}];
  string description = 3[(validate.rules).string = {min_len: 1, max_len: 64}];
  string format = 4 [(validate.rules).string = {min_len: 1, max_len: 64, in: ["json","yaml"]}];
}

// 修改模板
message UseTemplateVersionRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
  uint32 server_id = 2[(validate.rules).uint32 = {gt: 0}];
}

// 解析配置
message ParseTemplatePreviewRequest {
  string content = 1[(validate.rules).string = {min_len: 7}];
  string env_keyword = 2[(validate.rules).string = {min_len: 1}];
  uint32 server_id = 3[(validate.rules).uint32 = {gt: 0}];
}

message ParseTemplatePreviewReply {
  string content = 1;
}

// 解析配置
message ParseTemplateRequest {
  uint32 server_id = 1[(validate.rules).uint32 = {gt: 0}];
  string env_keyword = 2[(validate.rules).string = {min_len: 1}];
}

message ParseTemplateReply {
  string content = 1;
  string format = 2;
}